<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/SearchAndSort">
        <item
                android:id="@+id/action_search"
                android:title="@android:string/search_go"
                android:icon="@drawable/ic_menu_search"
                app:showAsAction="always"
                app:actionViewClass="android.support.v7.widget.SearchView"
                android:visible="false"/>

        <item
                android:id="@+id/action_sort"
                android:title="@string/sort"
                android:icon="@drawable/ic_menu_sort"
                app:showAsAction="always"
                android:visible="false"/>
    </group>

    <group android:id="@+id/EditAndDelete">
        <item
                android:id="@+id/action_edit"
                android:title="@string/edit"
                android:icon="@drawable/ic_menu_edit"
                app:showAsAction="always"
                android:visible="false"/>
        <item
                android:id="@+id/action_remove"
                android:title="@string/remove"
                android:icon="@drawable/ic_menu_delete"
                app:showAsAction="always"
                android:visible="false"/>
    </group>

</menu>