<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/information"
            android:text="@string/possybilities_tip"
            android:textColor="@color/black"
            android:textSize="24sp"/>
    <RelativeLayout
            android:layout_centerInParent="true"
            android:id="@+id/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:id="@+id/textView14"
                android:layout_width="321dp"
                android:layout_height="wrap_content"
                android:text="@string/copy_tip"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_below="@+id/floatingActionButton2" android:layout_alignEnd="@+id/textView16"
                android:layout_marginTop="15dp"/>
        <TextView
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:id="@+id/textView12"
                android:layout_width="321dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/create_tip"
                android:textSize="14sp"
                android:textColor="@color/black"/>
        <TextView
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:id="@+id/textView15"
                android:layout_width="319dp"
                android:layout_height="wrap_content"
                android:text="@string/change_vault_tip"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="18dp"
                android:layout_below="@+id/linearLayout3" android:layout_alignEnd="@+id/textView13"/>
        <TextView
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:id="@+id/textView16"
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_tip"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_below="@+id/textView15" android:layout_alignStart="@+id/textView13"
                android:layout_marginTop="20dp"/>
        <TextView
                android:gravity="center"
                android:id="@+id/textView13"
                android:layout_width="321dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/sort_tip"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_below="@+id/floatingActionButton"
                android:layout_alignStart="@+id/textView12"/>
        <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:tint="@android:color/white" app:srcCompat="@drawable/folder_icon"
                android:id="@+id/floatingActionButton2"
                android:layout_below="@+id/textView13" app:fabSize="mini"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_below="@id/textView14"
                android:layout_width="80dp"
                android:layout_centerHorizontal="true"
                android:layout_height="40dp" android:id="@+id/linearLayout3">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" app:srcCompat="@drawable/ic_login"
                    android:id="@+id/imageView14"
                    android:layout_weight="1"/>
            <ImageView
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" app:srcCompat="@drawable/ic_key" android:id="@+id/imageView17"
                    android:layout_weight="1"/>
        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_plus"
                android:id="@+id/floatingActionButton"
                app:fabSize="mini"
                android:layout_below="@+id/textView12"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>


</RelativeLayout>
