<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/createPasswordToolbar"
            app:titleTextColor="@color/white" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp" android:layout_below="@+id/createPasswordToolbar"
            android:layout_alignParentStart="true" android:id="@+id/linearLayout2">

        <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/passwords_icon"
                android:id="@+id/changePasswordIconButton"
                style="@android:style/Widget.Holo.ImageButton"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:tint="@color/colorAccent"
                android:scaleType="fitCenter"/>

        <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/title"
                    android:ems="10"
                    android:layout_weight="1"
                    android:id="@+id/titleEditText"
                    android:textSize="14sp"
                    android:maxLength="30"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_weight="1"
                    android:hint="@string/description"
                    android:ems="10"
                    android:id="@+id/descriptionEditText"
                    android:textSize="14sp"
                    android:maxLength="100"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:srcCompat="@color/colorAccent"
            android:id="@+id/imageView2"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/login"
            android:maxLength="30"
            android:textSize="14sp"
            android:ems="10"
            android:id="@+id/loginEditText"
            android:layout_below="@+id/imageView2"
            android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:maxLength="30"
            android:textSize="14sp"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_below="@+id/loginEditText"
            android:layout_alignParentStart="true"/>
    <CheckBox
            android:text="@string/add_to_favorites_after_creating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addInFavAfterCreatingCheckBox"
            android:layout_below="@+id/passwordEditText"
            android:layout_alignParentStart="true"/>

    <android.support.design.widget.FloatingActionButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            app:fabSize="normal"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/ic_tick"
            android:id="@+id/createPasswordFAB"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" android:visibility="invisible"/>

</RelativeLayout>
