<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="wrap_content"
              android:layout_height="wrap_content" android:orientation="vertical">

    <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" android:layout_weight="1"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1">
        <Space
                android:layout_width="35dp"
                android:layout_height="wrap_content" android:layout_weight="1"/>
        <TextView
                android:text="@string/delete_password"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deleteTextView"
                android:textSize="18sp"
                android:layout_weight="1"/>
        <Space
                android:layout_width="35dp"
                android:layout_height="wrap_content" android:layout_weight="1"/>
    </LinearLayout>

    <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" android:layout_weight="1"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp" app:srcCompat="@color/colorAccent" android:id="@+id/imageView9"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:background="@drawable/custom_ripple"
                android:text="@string/decline"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/declineButton"
                android:gravity="center"
                android:layout_weight="1" android:textStyle="bold"/>
        <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                app:srcCompat="@android:color/darker_gray"
                android:id="@+id/imageView10"/>
        <TextView
                android:background="@drawable/custom_ripple"
                android:text="@string/ok"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/okButton"
                android:gravity="center"
                android:layout_weight="1" android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
