<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="janeelsmur.justonelock.EnteringActivity">

    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:text="@string/HelloString"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:visibility="visible" />

        <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:id="@+id/blackDote"
                android:visibility="visible"
                android:src="@color/colorPrimaryDark"
                android:background="@color/colorPrimaryDark"
                tools:ignore="ContentDescription"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="65dp"/>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/relativeLayout" android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true">

                <TextView
                        android:text="@string/WrongPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/onEnterText"
                        android:visibility="invisible"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textAllCaps="false"
                        android:textColor="@color/lightRed"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:layout_alignBaseline="@+id/master_key" android:layout_alignBottom="@+id/master_key"
                        android:layout_centerHorizontal="true"/>
                <EditText
                        android:labelFor="@+id/master_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:gravity="center"
                        android:id="@+id/master_key"
                        android:selectAllOnFocus="false"
                        android:maxLines="1"
                        android:maxLength="16"
                        android:visibility="visible"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>
        </RelativeLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/linearLayout" android:layout_below="@+id/relativeLayout"
                android:layout_alignEnd="@+id/relativeLayout" android:layout_alignStart="@+id/relativeLayout">
            <ImageView
                    android:layout_width="5dp"
                    android:layout_height="match_parent" app:srcCompat="@color/colorAccent"
                    android:id="@+id/imageView6"/>
            <TextView
                    android:background="@drawable/custom_ripple"
                    android:gravity="center"
                    android:text="@string/change_vault"
                    android:layout_width="match_parent"
                    android:id="@+id/change_vault_button"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>
            <ImageView
                    android:layout_width="5dp"
                    android:layout_height="match_parent" app:srcCompat="@color/colorAccent"
                    android:id="@+id/imageView4"/>
            <TextView
                    android:background="@drawable/custom_ripple"
                    android:gravity="center"
                    android:text="@string/Enter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/enter_button"
                    android:layout_weight="1"/>
            <ImageView
                    android:layout_width="5dp"
                    android:layout_height="match_parent" app:srcCompat="@color/colorAccent"
                    android:id="@+id/imageView5"/>
        </LinearLayout>

    <TextView
        android:id="@+id/name_of_file"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="14sp" />

</RelativeLayout>
