<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <RelativeLayout
            android:id="@+id/tempPasswordsRelativeLayout"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:visibility="visible">

        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@drawable/ic_key"
                android:id="@+id/defaultImage"
                android:layout_centerHorizontal="true" android:scaleType="centerCrop"/>
        <TextView
                android:gravity="center"
                android:text="@string/text_for_empty_entries_screen"
                android:layout_below="@+id/defaultImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"/>
    </RelativeLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/passwords_without_folder_container"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <RelativeLayout
                        android:id="@+id/grouped_text_relative_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:visibility="gone">

                    <TextView
                            android:text="@string/not_grouped"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView7"
                            android:textAlignment="textStart" android:layout_alignParentTop="true"
                            android:layout_alignParentStart="true"/>
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp" app:srcCompat="@color/gray"
                            android:id="@+id/imageView11" android:layout_alignParentBottom="true"
                            android:layout_alignParentStart="true"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/folders_container"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <RelativeLayout
                        android:id="@+id/folders_text_relative_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:visibility="gone">

                    <TextView
                            android:text="@string/folders"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView8"/>
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp" app:srcCompat="@color/gray" android:id="@+id/imageView12"
                            android:layout_alignParentBottom="true" android:layout_alignParentStart="true"/>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>